--- a/Project/Scripts/Tween Animations/Project.TweenAnimations.asmdef
+++ b/Project/Scripts/Tween Animations/Project.TweenAnimations.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "TweenAnimations",
+    "name": "Project.TweenAnimations",
     "rootNamespace": "",
     "references": [
         "GUID:4db865c5757194d4fb774542fc98bc04"
