--- a/Assets/Project/Scripts/State Machine/Project.StateMachine.asmdef
+++ b/Assets/Project/Scripts/State Machine/Project.StateMachine.asmdef
@@ -1,3 +1,16 @@
 {
-	"name": "Project.StateMachine"
+    "name": "Project.StateMachine",
+    "rootNamespace": "",
+    "references": [
+        "GUID:8f7d4ec3caeccbb4e81592a534a0fdf6"
+    ],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
