--- a/Assets/D-Dev/UtilScripts/StatsSystem/D-Dev.StatsSystem.asmdef
+++ b/Assets/D-Dev/UtilScripts/StatsSystem/D-Dev.StatsSystem.asmdef
@@ -1,10 +1,10 @@
 {
-    "name": "D-Dev.DamagableSystem",
+    "name": "D-Dev.StatsSystem",
     "rootNamespace": "",
     "references": [
+        "GUID:6d0199508f23afb4692c5fcd34c5ce08",
         "GUID:bca94c6d884a7ab4f89267dd3bf8bd41",
-        "GUID:3b38e9961eb41724fb98188d658154ff",
-        "GUID:6d0199508f23afb4692c5fcd34c5ce08"
+        "GUID:8f7d4ec3caeccbb4e81592a534a0fdf6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
