--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "com.d-dev.utils",
   "version": "1.0.0",
   "displayName": "D-Dev Tools",
-  "dependencies": {
-    
+  "dependencies": 
+  {
+   "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+   "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts",
+    "com.demigiant.dotween": "https://github.com/Demigiant/dotween.git#1.2.335"
   }
 }
 
