--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "displayName": "D-Dev Tools",
   "dependencies": 
   {
-    "com.neuecc.unirx": "https://github.com/neuecc/UniRx.git?path=Assets/Plugins/UniRx/Scripts#7.1.0",
-    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask#2.5.10"
+    "com.cysharp.unitask": "2.5.10",
+    "com.neuecc.unirx": "7.1.0"
   }
 }
 
