--- a/UnityPackages/package.json
+++ b/UnityPackages/package.json
@@ -4,6 +4,7 @@
   "displayName": "D-Dev Tools",
   "dependencies": 
   {
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask"
   }
 }
 
