--- a/Package/package.json
+++ b/Package/package.json
@@ -4,7 +4,7 @@
   "displayName": "D-Dev Tools",
   "dependencies": 
   {
-    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask"
+    "com.cysharp.unitask": "2.5.10"
   }
 }
 
