--- a/Scripts/Runtime/UtilScripts/Raycaster/D-Dev.Raycaster.asmdef
+++ b/Scripts/Runtime/UtilScripts/Raycaster/D-Dev.Raycaster.asmdef
@@ -2,7 +2,8 @@
     "name": "D-Dev.Raycaster",
     "rootNamespace": "",
     "references": [
-        "GUID:6efb4fdd415a3304aae591e808eb8d6c"
+        "GUID:6efb4fdd415a3304aae591e808eb8d6c",
+        "GUID:bb00ce5d32a0ba74cbd0bde18e5eaefe"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
