--- a/Scripts/Runtime/UtilScripts/_Base/D-Dev.Base.asmdef
+++ b/Scripts/Runtime/UtilScripts/_Base/D-Dev.Base.asmdef
@@ -1,12 +1,7 @@
 {
-    "name": "D-Dev.ActionsStateController",
+    "name": "D-Dev.Base",
     "rootNamespace": "",
-    "references": [
-        "UniTask",
-        "D-Dev.Base",
-        "D-Dev.ScriptableVariables",
-        "D-Dev.ActionGroup"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
