--- a/Scripts/Runtime/UtilScripts/Entities/D-Dev.EntitySpawner.asmdef
+++ b/Scripts/Runtime/UtilScripts/Entities/D-Dev.EntitySpawner.asmdef
@@ -1,11 +1,10 @@
 {
-    "name": "D-Dev.ActionsStateController",
+    "name": "D-Dev.EntitySpawner",
     "rootNamespace": "",
     "references": [
-        "UniTask",
-        "D-Dev.Base",
-        "D-Dev.ScriptableVariables",
-        "D-Dev.ActionGroup"
+        "GUID:d789ad2b695405b409ea35b65e2bfca9",
+        "GUID:ab2e430d573bb8b4ea6f18b178880bf7",
+        "GUID:8f7d4ec3caeccbb4e81592a534a0fdf6"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
