--- a/Scripts/Runtime/UtilScripts/InventorySystem/D-Dev.InventorySystem.asmdef
+++ b/Scripts/Runtime/UtilScripts/InventorySystem/D-Dev.InventorySystem.asmdef
@@ -1,9 +1,8 @@
 {
-    "name": "D-Dev.Entity",
+    "name": "D-Dev.InventorySystem",
     "rootNamespace": "",
     "references": [
-        "GUID:ab2e430d573bb8b4ea6f18b178880bf7",
-        "GUID:8f7d4ec3caeccbb4e81592a534a0fdf6"
+        "GUID:d789ad2b695405b409ea35b65e2bfca9"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
