--- a/Scripts/Runtime/UtilScripts/MenuHandler/D-Dev.Menu.asmdef
+++ b/Scripts/Runtime/UtilScripts/MenuHandler/D-Dev.Menu.asmdef
@@ -6,7 +6,9 @@
         "GUID:560b04d1a97f54a4e82edc0cbbb69285",
         "GUID:cb1a05c32f5d5744bb2273b8970ae954",
         "GUID:605f1a751ab411e4caebb830a5ad05fd",
-        "GUID:0c083109b251161418234030b436a9b6"
+        "GUID:0c083109b251161418234030b436a9b6",
+        "GUID:05da580bf895a0b4f836ba90d6454ce9",
+        "GUID:a947a454b8df3474d81c9577867188ff"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
