--- a/Scripts/Runtime/UtilScripts/ActionFlow/D-Dev.ActionFlow.asmdef
+++ b/Scripts/Runtime/UtilScripts/ActionFlow/D-Dev.ActionFlow.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "D-Dev.ActionFlowController",
+    "name": "D-Dev.ActionFlow",
     "rootNamespace": "",
     "references": [
         "GUID:d789ad2b695405b409ea35b65e2bfca9",
