--- a/Scripts/Runtime/Systems/Tween Animations/D-Dev.TweenAnimations.asmdef
+++ b/Scripts/Runtime/Systems/Tween Animations/D-Dev.TweenAnimations.asmdef
@@ -2,7 +2,9 @@
     "name": "D-Dev.TweenAnimations",
     "rootNamespace": "",
     "references": [
-        "GUID:0c083109b251161418234030b436a9b6"
+        "GUID:0c083109b251161418234030b436a9b6",
+        "GUID:3b570a5146f9d4f0fa107ed4559471a3",
+        "GUID:3aa1866a824b5472da50fe142777d95f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
