--- a/Package/package.json
+++ b/Package/package.json
@@ -5,7 +5,8 @@
   "dependencies": 
   {
     "com.unity.inputsystem": "1.7.0",
-    "com.unity.cinemachine":  "2.10.3"
+    "com.unity.cinemachine":  "2.10.3",
+    "com.unity.addressables": "2.7.6"
   }
 }
 
