--- a/Scripts/Runtime/Systems/Utility/D-Dev.Utility.asmdef
+++ b/Scripts/Runtime/Systems/Utility/D-Dev.Utility.asmdef
@@ -3,7 +3,9 @@
     "rootNamespace": "",
     "references": [
         "GUID:4307f53044263cf4b835bd812fc161a4",
-        "GUID:6d0199508f23afb4692c5fcd34c5ce08"
+        "GUID:6d0199508f23afb4692c5fcd34c5ce08",
+        "GUID:ba7d088f93a8e1649b9edc0955fab802",
+        "GUID:adf3757dee9f5eb4580f73a8545c7603"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
