--- a/Scripts/Runtime/PlayerUtilities/D-Dev.PlayerUtilities.asmdef
+++ b/Scripts/Runtime/PlayerUtilities/D-Dev.PlayerUtilities.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "D-Dev.PlayerStateController",
+    "name": "D-Dev.PlayerUtilities",
     "rootNamespace": "",
     "references": [
         "GUID:d789ad2b695405b409ea35b65e2bfca9",
@@ -7,7 +7,8 @@
         "GUID:ba7d088f93a8e1649b9edc0955fab802",
         "GUID:e1891072a17d62e42bb8c10c14d59156",
         "GUID:6a50307629a80fd4090ca6d93dbe1f7e",
-        "GUID:adf3757dee9f5eb4580f73a8545c7603"
+        "GUID:adf3757dee9f5eb4580f73a8545c7603",
+        "D-Dev.MovementHandler"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
