--- a/Scripts/Runtime/Systems/DamageableSystem/Extensions/D-Dev.DamageableSystem.Extensions.asmdef
+++ b/Scripts/Runtime/Systems/DamageableSystem/Extensions/D-Dev.DamageableSystem.Extensions.asmdef
@@ -5,7 +5,8 @@
         "GUID:6198492fcc5b62748893cb317967c90f",
         "GUID:ea2556969bd3c4d43a76b6d609c961b3",
         "GUID:6d0199508f23afb4692c5fcd34c5ce08",
-        "GUID:ba7d088f93a8e1649b9edc0955fab802"
+        "GUID:ba7d088f93a8e1649b9edc0955fab802",
+        "GUID:1d36efb7d24523b41b598aa02555bb7a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
