--- a/Scripts/Runtime/Systems/CurrencySystem/Extensions/D-Dev.CurrencySystem.Extensions.asmdef
+++ b/Scripts/Runtime/Systems/CurrencySystem/Extensions/D-Dev.CurrencySystem.Extensions.asmdef
@@ -6,7 +6,9 @@
         "GUID:0ce9d49e8045908448905aba67046949",
         "GUID:cb1a05c32f5d5744bb2273b8970ae954",
         "GUID:ea2556969bd3c4d43a76b6d609c961b3",
-        "GUID:6d0199508f23afb4692c5fcd34c5ce08"
+        "GUID:6d0199508f23afb4692c5fcd34c5ce08",
+        "GUID:ba7d088f93a8e1649b9edc0955fab802",
+        "GUID:1d36efb7d24523b41b598aa02555bb7a"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
