--- a/Scripts/Editor/CSV/D-Dev.CSV.asmdef
+++ b/Scripts/Editor/CSV/D-Dev.CSV.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:74cacc66adaa63e41931e373163dfd62"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
