--- a/Scripts/Runtime/Systems/Entity/EntitySpawner/D-Dev.EntitySpawner.asmdef
+++ b/Scripts/Runtime/Systems/Entity/EntitySpawner/D-Dev.EntitySpawner.asmdef
@@ -8,7 +8,8 @@
         "GUID:ea2556969bd3c4d43a76b6d609c961b3",
         "GUID:5456a4bccc05d9848a04f774d86763b4",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:1d36efb7d24523b41b598aa02555bb7a"
+        "GUID:1d36efb7d24523b41b598aa02555bb7a",
+        "GUID:ba7d088f93a8e1649b9edc0955fab802"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
