--- a/Scripts/Runtime/Systems/Utility Actions & Conditions/Utility Actions/D-Dev.UtilityActions.asmdef
+++ b/Scripts/Runtime/Systems/Utility Actions & Conditions/Utility Actions/D-Dev.UtilityActions.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "D-Dev.Actions",
+    "name": "D-Dev.UtilityActions",
     "rootNamespace": "",
     "references": [
         "GUID:d789ad2b695405b409ea35b65e2bfca9",
