--- a/Scripts/Runtime/Systems/CurrencySystem/D-Dev.CurrencySystem.asmdef
+++ b/Scripts/Runtime/Systems/CurrencySystem/D-Dev.CurrencySystem.asmdef
@@ -2,7 +2,9 @@
     "name": "D-Dev.CurrencySystem",
     "rootNamespace": "",
     "references": [
-        "GUID:ba7d088f93a8e1649b9edc0955fab802"
+        "GUID:ba7d088f93a8e1649b9edc0955fab802",
+        "GUID:e281149ec50211a44bff4d8585edd25c",
+        "GUID:cb1a05c32f5d5744bb2273b8970ae954"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
