--- a/Scripts/Runtime/Systems/Tween Animations/D-Dev.TweenAnimations.asmdef
+++ b/Scripts/Runtime/Systems/Tween Animations/D-Dev.TweenAnimations.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:0c083109b251161418234030b436a9b6",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:ba7d088f93a8e1649b9edc0955fab802"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
