--- a/Scripts/Runtime/Systems/CurrencySystem/CurrencyAnimation/D-Dev.CurrencySystem.Animation.asmdef
+++ b/Scripts/Runtime/Systems/CurrencySystem/CurrencyAnimation/D-Dev.CurrencySystem.Animation.asmdef
@@ -1,9 +1,13 @@
 {
-    "name": "D-Dev.CurrencySystem",
+    "name": "D-Dev.CurrencySystem.Animation",
     "rootNamespace": "",
     "references": [
+        "GUID:605f1a751ab411e4caebb830a5ad05fd",
         "GUID:ba7d088f93a8e1649b9edc0955fab802",
-        "GUID:605f1a751ab411e4caebb830a5ad05fd"
+        "GUID:0c083109b251161418234030b436a9b6",
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:a0f06407a79e8734a94202f0d6b4d6b2",
+        "GUID:a0f06407a79e8734a94202f0d6b4d6b2"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
