--- a/Package/Scripts/Runtime/Systems/MeshPathCreator/D-Dev.PathCreator.asmdef
+++ b/Package/Scripts/Runtime/Systems/MeshPathCreator/D-Dev.PathCreator.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "D-Dev.MeshPathCreator",
+    "name": "D-Dev.PathCreator",
     "rootNamespace": "",
     "references": [],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
